# wk01_tooling_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: Cli_Options.hpp  File_Reader.hpp  args.hpp  cli_options.hpp  file_reader.hpp  hex_formatter.hpp  hexfmt.hpp
src/: args.cpp  cli_options.cpp  file_reader.cpp  hex_formatter.cpp  hexfmt.cpp  main.cpp
tests/: cli_options_gtest.cpp  file_reader_gtest.cpp  hex_formatter_gtest.cpp
